<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.BooksListFragment">

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/tvYourBookShelf"
          android:text="@string/your_book_shelf"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_marginStart="24dp"
          android:layout_marginTop="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLogout"
            android:text="@string/logout"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:id="@+id/viewBookShelf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvYourBookShelf"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSort"
            android:text="@string/sort"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewBookShelf"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rvSorting"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/include_sorting_items"
            tools:itemCount="14"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/tvSort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvSort"
            app:layout_constraintBottom_toBottomOf="@id/tvSort"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAscendingOrder"
            android:text="@string/ascending_order"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSort"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:theme="@style/switchButton"
            app:layout_constraintStart_toEndOf="@id/tvAscendingOrder"
            app:layout_constraintTop_toTopOf="@id/tvAscendingOrder"
            app:layout_constraintBottom_toBottomOf="@id/tvAscendingOrder"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/rvCategories"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/include_books_layout"
            tools:itemCount="14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAscendingOrder"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>